--- a/setup/etc/fail2ban/filter.d/issabel-gui.conf
+++ b/setup/etc/fail2ban/filter.d/issabel-gui.conf
@@ -15,7 +15,7 @@ __pid_re = (?:\[\d+\])
 
 iso8601 = \d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}\.\d+[+-]\d{4}
 
-failregex = ^(%(__prefix_line)s|\[\]\s*)LOGIN ([^:]*): Authentication Failure to Web Interface login. Failed password for admin from <HOST>.$
+failregex = ^(%(__prefix_line)s|\[\]\s*)LOGIN ([^:]*): Authentication Failure to Web Interface login. Failed ([^:]*) for ([^:]*) from <HOST>.$
 
 ignoreregex =
 
